Added new Notbook

--- a/alma_batch_examples.ipynb
+++ b/alma_batch_examples.ipynb
@@ -17,7 +17,207 @@
    "outputs": [],
    "source": [
     "from alma_batch import AlmaBatch\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load a set of items to be scanned in from Alma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_TO_CONFIG = Path('./')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_id = '14218981390004107'\n",
+    "set_config_file = PATH_TO_CONFIG / 'sets_config.yml'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_batch = AlmaBatch(set_config_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<alma_batch.AlmaBatch at 0x10ec0a1f0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_batch.data = [{'set_id': set_id}]\n",
+    "set_batch.validate_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<alma_batch.AlmaBatch at 0x10ec0a1f0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fetch contents of the set\n",
+    "await set_batch.amake_requests()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Flatten list\n",
+    "members = [member for result in set_batch.results for member in result['result']['member']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(members)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scan the items using the Bibs API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items_config_file = PATH_TO_CONFIG / 'scan_items_config.yml'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract links and add additional params \n",
+    "scan_in_params = {'op': 'scan',\n",
+    "                 'library': 'gelman',\n",
+    "                 'circ_desk': 'SCRC_DESK'}\n",
+    "items_to_scan = [dict({'link': item['link']}, **scan_in_params)\n",
+    "                for item in members]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<alma_batch.AlmaBatch at 0x10db7d2b0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scan_batch = AlmaBatch(items_config_file)\n",
+    "scan_batch.data = items_to_scan\n",
+    "scan_batch.validate_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<alma_batch.AlmaBatch at 0x10db7d2b0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await scan_batch.amake_requests()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scan_batch.errors"
    ]
   },
   {
@@ -140,8 +340,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From a notebook, use the async version of `AlmaBatch.make_requests`. From a standalone script, simply do\n",
-    "`ab.make_requests(batch_size=500, serialize_return=True)`.\n",
+    "From a notebook, use the async function directly: `AlmaBatch.amake_requests`. From a standalone script, simply do\n",
+    "`ab.make_requests(batch_size=500, serialize_return=True)`, which calls a wrapper function that kicks off the event loop. (In a Jupyter environment, we use the already running event loop.)\n",
     "\n",
     "Set `serialize_return` to `False` if you don't want to keep the API output. \n",
     "\n",
@@ -174,7 +374,7 @@
     }
    ],
    "source": [
-    "await ab.make_requests_async(batch_size=500, serialize_return=True)"
+    "await ab.amake_requests_async(batch_size=500, serialize_return=True)"
    ]
   },
   {
@@ -238,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
