Fixed error in examples

--- a/alma_batch_examples.ipynb
+++ b/alma_batch_examples.ipynb
@@ -374,7 +374,7 @@
     }
    ],
    "source": [
-    "await ab.amake_requests_async(batch_size=500, serialize_return=True)"
+    "await ab.amake_requests(batch_size=500, serialize_return=True)"
    ]
   },
   {
